--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
+  <meta charset="UTF-8">
   <title>UrbanGeist</title>
+
+  <!-- Azure Maps SDK -->
   <script src="https://atlas.microsoft.com/sdk/javascript/mapcontrol/2/atlas.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://atlas.microsoft.com/sdk/javascript/mapcontrol/2/atlas.min.css" />
+  
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    h1 { padding: 1rem; background: #333; color: white; text-align: center; }
+    #map { height: 400px; width: 100%; }
+    #lista-locais { padding: 1rem; }
+    .local-item { margin-bottom: 1.5rem; border-bottom: 1px solid #ccc; padding-bottom: 1rem; }
+    .local-item img { border-radius: 8px; }
+  </style>
 </head>
 <body>
-  <h1>Mapa de Recomendações</h1>
-  <div id="map" style="width: 100%; height: 400px;"></div>
-  <h2>Locais Próximos</h2>
+  <h1>UrbanGeist - Pontos de Interesse</h1>
+  <div id="map"></div>
+  <h2 style="padding: 1rem;">Locais Próximos</h2>
   <div id="lista-locais"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
