--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UrbanGeist</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="frontend/home.css">
     <link rel="stylesheet" href="https://atlas.microsoft.com/sdk/javascript/mapcontrol/2/atlas.min.css" />
 </head>
 <body>
