--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header class="header">
         <nav>
             <div class="nav-title">
-                <h2><a href="">UrbanGeist <img src="images/map.png" class="header-imgs" alt="icon"></a></h2>
+                <h2><a href="">UrbanGeist <img src="frontend/images/map.png" class="header-imgs" alt="icon"></a></h2>
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="authentication.html"><img src="images/perfil.png" class="header-imgs" alt="Perfil"></a></li>
+                    <li><a href="frontend/authentication.html"><img src="frontend/images/perfil.png" class="header-imgs" alt="Perfil"></a></li>
                 </ul> 
             </div>
         </nav>
@@ -43,7 +43,7 @@
         <div class="nav-footer">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Sobre Nós</a></li>
+                <li><a href="frontend/about.html">Sobre Nós</a></li>
             </ul>
         </div>   
     </footer>
