--- a/frontend/authentication.html
+++ b/frontend/authentication.html
@@ -5,24 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist Art</title>
+    <title>UrbanGeist</title>
     <link rel="stylesheet" href="authentication.css">
 </head>
 
 <header class="header">
     <nav>
         <div class="nav-title">
-            <h2><a href="index.html">UrbanGeist <img src="images/map.png" class="header-imgs" alt="icon"></a></h2>
+            <h2><a href="../index.html">UrbanGeist <img src="images/map.png" class="header-imgs" alt="icon"></a></h2>
         </div>
         <div class="nav-links">
             <ul>
                 <li><a href="authentication.html"><img src="images/perfil.png" class="header-imgs" alt="Perfil"></a></li>
-                <li>
-                    <div class="search-bar">
-                        <input type="text" id="searchInput" placeholder="Pesquisar locais, eventos...">
-                        <button id="searchBtn">🔍</button>
-                    </div>
-                </li>
             </ul> 
         </div>
     </nav>
@@ -112,7 +106,7 @@
         <p id="direitos">© 2025 UrbanGeist, Todos os direitos reservados</p>
         <div class="nav-footer">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">Sobre Nós</a></li>
             </ul>
         </div>   
