--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     </footer>
 
     <script src="https://atlas.microsoft.com/sdk/javascript/mapcontrol/2/atlas.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
