--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <main class="middle-container" id="explora">
         <div id="mapa"></div>
 
+        <div id="local-selecionado" class="detalhes-local" style="display:none;"></div>
+
         <div id="filtros">
             <button data-categoria="Todos" class="filtro ativo">Todos</button>
             
