--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <button data-categoria="Todos" class="filtro ativo">Todos</button>
             
             <div class="view-toggle">
-                <button id="modo-lista" title="Ver em lista">☰</button>
-                <button id="modo-grelha" title="Ver em grelha">▤</button>
+                <button id="modo-lista" class="btn-view" title="Ver em lista">☰</button>
+                <button id="modo-grelha" class="btn-view ativo" title="Ver em grelha">▤</button>
             </div>
         </div>
 
