--- a/frontend/authentication.html
+++ b/frontend/authentication.html
@@ -124,12 +124,12 @@ document.getElementById("btn_criar").addEventListener("click", async function ()
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
     
-        const response = await fetch('https://your-function.azurewebsites.net/api/login', {
+        const response = await fetch('https://urbangeist-function.azurewebsites.net/api/login', {
             method: 'POST',
+            credentials: 'include', // Para enviar cookies
+            mode: 'cors', // Ativa o modo CORS explicitamente 
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, password }),
-            credentials: 'include', // Para enviar cookies
-            mode: 'cors' // Ativa o modo CORS explicitamente 
         });
     
         if (response.ok) {
