--- a/frontend/authentication.html
+++ b/frontend/authentication.html
@@ -118,24 +118,32 @@ document.getElementById("btn_criar").addEventListener("click", async function ()
 });
 </script>
 
-
 <script>
     async function login() {
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-    
-        const response = await fetch('https://urbangeist-function.azurewebsites.net/api/login', {
-            method: 'POST',
-            credentials: 'include', // Para enviar cookies
-            mode: 'cors', // Ativa o modo CORS explicitamente 
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email, password }),
-        });
-    
-        if (response.ok) {
-            window.location.href = 'index.html';
-        } else {
-            alert('Login falhou!');
+
+        try {
+            const response = await fetch('https://urbangeist-function.azurewebsites.net/api/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ email, password })
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                // Guarda a sessão no localStorage
+                localStorage.setItem("sessionId", data.sessionId);
+                localStorage.setItem("user_email", data.email);
+                localStorage.setItem("user_nome", data.nome);
+                window.location.href = "index.html";
+            } else {
+                alert(data || "Erro no login.");
+            }
+        } catch (err) {
+            console.error("Erro:", err);
+            alert("Erro de conexão com o servidor.");
         }
     }
 </script>
