--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <script>
-    fetch('https://your-function.azurewebsites.net/api/checkSession', {
-        method: 'GET',
-        credentials: 'include', // Para enviar cookies
-        mode: 'cors' // Ativa o modo CORS explicitamente
-    })
-    .then(response => {
-        if (!response.ok) throw new Error('Não autorizado');
-        return response.json();
-    })
-    .catch(error => {
-        window.location.href = 'frontend/authentication.html';
+    const sessionId = localStorage.getItem("sessionId");
+    const response = await fetch("https://urbangeist-function.azurewebsites.net/api/checkSession", {
+        method: "GET",
+        headers: {
+            "Authorization": `Bearer ${sessionId}`
+        }
     });
 </script>
 
