--- a/frontend/authentication.html
+++ b/frontend/authentication.html
@@ -137,7 +137,7 @@ document.getElementById("btn_criar").addEventListener("click", async function ()
                 localStorage.setItem("sessionId", data.sessionId);
                 localStorage.setItem("user_email", data.email);
                 localStorage.setItem("user_nome", data.nome);
-                window.location.href = "index.html";
+                window.location.href = "../index.html";
             } else {
                 alert(data || "Erro no login.");
             }
