--- a/frontend/authentication.html
+++ b/frontend/authentication.html
@@ -88,7 +88,7 @@ document.getElementById("btn_criar").addEventListener("click", async function ()
     const password = document.getElementById("passwordR").value;
 
     try {
-        const response = await fetch("https://urbangeist-function.azurewebsites.net/api/utilizadores", {
+        const response = await fetch("https://urbangeist-function.azurewebsites.net/api/addUtilizador", {
             method: "POST",
             headers: { 
                 "Content-Type": "application/json",
