--- a/frontend/formPerguntas.html
+++ b/frontend/formPerguntas.html
@@ -140,6 +140,7 @@
     <button type="submit">Submeter</button>
   </form>
 
+<script src="authentication.js" defer></script>
 <script>
 document.querySelector("form").addEventListener("submit", async function (e) {
     e.preventDefault();
